--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="./style.css">
     <title>טיולי ירושלים</title>
 </head>
 <body>
 
     <header>
-        <h1>טיולי ירושלים Jerusalem Trips</h1>
+  <div id="header-wrap">
+        <h1  >טיולי ירושלים   Jerusalem Trips</h1>
+        <img src="images/logo.jpg" alt="Company Logo" id="logo">
+    </div>
+
     </header>
 
     <section class="services">
