--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <ul>
             <li><a href="tel:0584181598">עומר Omer: 058-418-1598</a></li>
             <li><a href="tel:0542879174">אלעזר Elazar: 054-287-9174</a></li>
-            <li>מייל:  Email:<a href="mailto:Omermedical5@gmail.com">Omermedical5@gmail.com</a> </li>
+            <li>מייל:  Email:<a href="mailto:Omermedical5@gmail.com">jerusalemtrips@gmail.com</a> </li>
         </ul>
     </section>
     
