added mail and :

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </header>
 
     <section class="services">
-        <h2>השירותים שלנו</h2>
+        <h2> השירותים שלנו</h2>
         <p>אבטחה רפואית - מערים וחובשים</p>
         <p>שירותי אבטחה</p>
         <p>מדריכי טיולים</p>
@@ -91,11 +91,11 @@
     <p class="description">ניתן לקבל את כל שירותי הטיולים משירותי הדרכה ועד שירותי אבטחה רפואית ושמירה.</p>
     
     <section class="contacts">
-        <h2>צרו קשר</h2>
+        <h2> : צרו קשר</h2>
         <ul>
             <li><a href="tel:0584181598">☎ עומר Omer : 058-418-1598</a></li>
             <li><a href="tel:0542879174">☎ אקי Eki : 054-287-9174</a></li>
-            <li>✉ מייל: <a href="mailto:jerusalemtrips@gmail.com">jerusalemtrips@gmail.com</a></li>
+            <li>מייל: <a href="mailto:jerusalemtrips@gmail.com"> ✉  jerusalemtrips@gmail.com</a></li>
         </ul>
     </section>
     
