i added fma instructior

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h2> השירותים שלנו</h2>
         <p>אבטחה רפואית - מערים וחובשים</p>
         <p>שירותי אבטחה</p>
-        <p>מדריכי טיולים</p>
+        <p>מדריכי/ ות טיולים</p>
         <p>Medical and security services</p>
     </section>
     
@@ -95,7 +95,7 @@
         <ul>
             <li><a href="tel:0584181598">☎ עומר Omer : 058-418-1598</a></li>
             <li><a href="tel:0542879174">☎ אקי Eki : 054-287-9174</a></li>
-            <li>מייל: <a href="mailto:jerusalemtrips@gmail.com"> ✉  jerusalemtrips@gmail.com</a></li>
+            <li>מייל : <a href="mailto:jerusalemtrips@gmail.com"> ✉  jerusalemtrips@gmail.com</a></li>
         </ul>
     </section>
     
