--- a/index.html
+++ b/index.html
@@ -8,156 +8,22 @@
   <title>טיולי ירושלים</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: 'Segoe UI', 'Helvetica Neue', 'Arial', sans-serif;
-      background: linear-gradient(to bottom right, #f6f9fc, #e0eafc);
-      color: #2c3e50;
-      text-align: center;
-      line-height: 1.6;
-      font-size: 18px;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      min-height: 100%;
-      background-color: #f3f5f7;
-      direction: rtl;
-    }
-
-    .wrapper {
-      max-width: 1200px;
-      width: 100%;
-      margin: 0 20px;
-      padding: 20px;
-      background-color: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    }
-
-    h1 {
-      font-size: 36px;
-      color: #004d7a;
-      margin-bottom: 20px;
-    }
-
-    h2 {
-      font-size: 28px;
-      color: #004d7a;
-      margin-bottom: 20px;
-    }
-
-    p {
-      font-size: 18px;
-      margin: 10px 0;
-      color: #555;
-    }
-
-    .contacts ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    .contacts a {
-      color: #008793;
-      text-decoration: none;
-      font-weight: bold;
-      padding: 8px 12px;
-      display: inline-block;
-      margin: 5px;
-      background-color: #e0f7fa;
-      border-radius: 5px;
-      transition: background 0.3s;
-    }
-
-    .contacts a:hover {
-      background-color: #b2ebf2;
-    }
-
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 20px;
-    }
-
-    .image-wrapper {
-      position: relative;
-      width: 300px;
-      height: 200px;
-      overflow: hidden;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    }
-
-    .image-wrapper img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      filter: grayscale(100%);
-      transition: all 0.4s ease-in-out;
-    }
-
-    .image-wrapper img:hover {
-      transform: scale(1.05);
-      filter: grayscale(0%);
-    }
-
-    footer {
-      background-color: #333;
-      color: white;
-      padding: 20px;
-      margin-top: 40px;
-      font-size: 16px;
-      text-align: center;
-    }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 28px;
-      }
-
-      h2 {
-        font-size: 22px;
-      }
-
-      p {
-        font-size: 16px;
-      }
-
-      .image-wrapper {
-        width: 100%;
-        height: auto;
-      }
-
-      .gallery {
-        flex-direction: column;
-        align-items: center;
-      }
-    }
-  </style>
 </head>
 <body>
+  <header>
+    <div id="header-wrap">
+      <h1>טיולי ירושלים - Jerusalem Trips</h1>
+      <img src="images/logo.jpg" alt="לוגו" id="logo" />
+      <button id="toggle-dark">🌙 מצב לילה</button>
+    </div>
+  </header>
 
-  <div class="wrapper">
-    <header>
-      <h1>טיולי ירושלים -- Jerusalem Trips</h1>
-      <img src="images/logo.jpg" alt="לוגו" id="logo" style="height: 80px; border-radius: 10px; animation: floatLogo 3s ease-in-out infinite;" />
-    </header>
-
+  <main>
     <section class="services">
-      <h2>המקצועיות שלנו</h2>
-      <p>אבטחה רפואית - מערים וחובשים</p>
+      <h2>השירותים שלנו</h2>
+      <p>אבטחה רפואית - חובשים</p>
       <p>שירותי אבטחה</p>
-      <p>מדריכי/ות טיולים</p>
+      <p>מדריכי טיולים</p>
       <p>Medical and security services</p>
     </section>
 
@@ -178,50 +44,39 @@
     <section>
       <h2>גלריה</h2>
       <div class="gallery">
-        <div class="image-wrapper">
-          <img src="images/1.jpg" alt="תמונה 1" />
-        </div>
-        <div class="image-wrapper">
-          <img src="images/2.jpg" alt="תמונה 2" />
-        </div>
-        <div class="image-wrapper">
-          <img src="images/3.jpg" alt="תמונה 3" />
-        </div>
-        <div class="image-wrapper">
-          <img src="images/4.jpg" alt="תמונה 4" />
-        </div>
-        <div class="image-wrapper">
-          <img src="images/5.jpg" alt="תמונה 5" />
-        </div>
-        <div class="image-wrapper">
-          <img src="images/6.jpg" alt="תמונה 6" />
-        </div>
+        <div class="image-wrapper"><img src="images/1.jpg" alt="תמונה 1"></div>
+        <div class="image-wrapper"><img src="images/2.jpg" alt="תמונה 2"></div>
+        <div class="image-wrapper"><img src="images/3.jpg" alt="תמונה 3"></div>
+        <div class="image-wrapper"><img src="images/4.jpg" alt="תמונה 4"></div>
+        <div class="image-wrapper"><img src="images/5.jpg" alt="תמונה 5"></div>
+        <div class="image-wrapper"><img src="images/6.jpg" alt="תמונה 6"></div>
       </div>
     </section>
 
-    <footer>
-      <p>&copy; כל הזכויות שמורות - </p>
-      <p>שירות מקצועי באהבה ❤️</p>
-    </footer>
-  </div>
+    <section class="video-section">
+      <h2>וידאוים</h2>
+      <div class="video-wrapper">
+        <video class="responsive-video" controls autoplay muted>
+          <source src="video1.mp4" type="video/mp4">
+          הווידיאו לא נתמך.
+        </video>
+      </div>
+      <div class="video-wrapper">
+        <video class="responsive-video" controls autoplay muted>
+          <source src="video2.mp4" type="video/mp4">
+          הווידיאו לא נתמך.
+        </video>
+      </div>
+    </section>
+  </main>
 
+  <footer>
+    <p>© כל הזכויות שמורות -- שירות מקצועי באהבה ❤️</p>
+  </footer>
+
+  <div id="scrollTop">⬆️</div>
+  <div id="whatsapp-chat"></div>
+
+  <script src="script.js"></script>
 </body>
 </html>
-<section class="video-section">
-  <div class="video-wrapper">
-    <video class="responsive-video" controls>
-      <source src="video1.mp4" type="video/mp4">
-      הווידיאו לא נתמך בדפדפן שלך.
-    </video>
-  </div>
-  
-  <div class="video-wrapper">
-    <video class="responsive-video" controls>
-      <source src="video2.mp4" type="video/mp4">
-      הווידיאו לא נתמך בדפדפן שלך.
-    </video>
-  </div>
-</section>
-
-
-
