--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
         </div>
       </div>
     </section>
-
+    
+    <video class="responsive-video" id="video1" controls autoplay muted>
+      <source src="video1.mp4" type="video/mp4">
+      <source src="video1.webm" type="video/webm">
+      <source src="video1.ogv" type="video/ogg">
+      הווידיאו לא נתמך.
+    </video>
+    
     <section class="video-section">
       <h2>קצת עלינו </h2>
 
