--- a/index.html
+++ b/index.html
@@ -77,7 +77,22 @@
   <a href="https://wa.me/972505437050" target="_blank" class="whatsapp-float animate-bounce" title="צור קשר בוואטסאפ">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="וואטסאפ">
   </a>
-
+  <div class="gallery">
+    <div class="image-wrapper">
+      <img src="image1.jpg" alt="תמונה 1">
+    </div>
+    <div class="image-wrapper">
+      <img src="image2.jpg" alt="תמונה 2">
+    </div>
+    <div class="image-wrapper">
+      <img src="image3.jpg" alt="תמונה 3">
+    </div>
+  </div>
+  <video controls>
+    <source src="video1.mp4" type="video/mp4">
+    הדפדפן שלך לא תומך בתגית הווידאו.
+  </video>
+  
   <footer>
     <p>© כל הזכויות שמורות --- שירות מקצועי באהבה ❤️</p>
   </footer>
@@ -88,5 +103,33 @@
   <script src="script.js"></script>
 </body>
 </html>
+<!-- כפתור מצב לילה -->
+<button id="toggle-dark">🌙 מצב לילה</button>
+
+<!-- כפתור חזרה למעלה -->
+<button id="scrollTop" style="display: none;">↑</button>
+
+<!-- כפתור וואטסאפ -->
+<div id="whatsapp-chat">
+  <img src="whatsapp-icon.png" alt="WhatsApp Chat">
+</div>
+
+<!-- הגלריה -->
+<div class="gallery">
+  <div class="image-wrapper">
+    <img src="image1.jpg" alt="Image 1">
+  </div>
+  <div class="image-wrapper">
+    <img src="image2.jpg" alt="Image 2">
+  </div>
+  <!-- הוספת תמונות נוספות בהתאם -->
+</div>
+
+<!-- וידאו -->
+<video class="responsive-video" controls>
+  <source src="video.mp4" type="video/mp4">
+  <source src="video.ogv" type="video/ogg">
+  <p>הדפדפן שלך לא תומך בנגן וידאו</p>
+</video>
 
 
