--- a/index.html
+++ b/index.html
@@ -58,22 +58,7 @@
       </div>
     </section>
 
-    <section class="video-section">
-      <h2>קצת עלינו</h2>
-      <div class="video-container">
-        <video controls>
-          <source src="video1.mp4" type="video/mp4">
-          הדפדפן שלך לא תומך בתגית הווידאו.
-        </video>
-        
-        <video controls>
-          <source src="video2.mp4" type="video/mp4">
-          הדפדפן שלך לא תומך בתגית הווידאו.
-        </video>
-      </div>
-    </section>
-  </main>
-
+  
   <a href="https://wa.me/972505437050" target="_blank" class="whatsapp-float animate-bounce" title="צור קשר בוואטסאפ">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="וואטסאפ">
   </a>
@@ -88,10 +73,6 @@
       <img src="image3.jpg" alt="תמונה 3">
     </div>
   </div>
-  <video controls>
-    <source src="video1.mp4" type="video/mp4">
-    הדפדפן שלך לא תומך בתגית הווידאו.
-  </video>
   
   <footer>
     <p>© כל הזכויות שמורות --- שירות מקצועי באהבה ❤️</p>
@@ -113,6 +94,19 @@
 <div id="whatsapp-chat">
   <img src="whatsapp-icon.png" alt="WhatsApp Chat">
 </div>
+<main>
+  <section class="gallery">
+    <img src="img1.jpg" alt="תמונה 1" class="color-transition">
+    <img src="img2.jpg" alt="תמונה 2" class="color-transition">
+    <img src="img3.jpg" alt="תמונה 3" class="color-transition">
+  </section>
+</main>
+
+<button id="backToTop">↑</button>
+
+<script src="script.js"></script>
+</body>
+</html>
 
 <!-- הגלריה -->
 <div class="gallery">
@@ -124,12 +118,5 @@
   </div>
   <!-- הוספת תמונות נוספות בהתאם -->
 </div>
-
-<!-- וידאו -->
-<video class="responsive-video" controls>
-  <source src="video.mp4" type="video/mp4">
-  <source src="video.ogv" type="video/ogg">
-  <p>הדפדפן שלך לא תומך בנגן וידאו</p>
-</video>
 
 
