--- a/index.html
+++ b/index.html
@@ -3,11 +3,44 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>טיולי ירושלים</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+<header>
+  <div id="header-wrap">
+    <h1>טיולי ירושלים - Jerusalem Trips</h1>
+    <img src="images/logo.jpg" alt="לוגו" id="logo" />
+  </div>
+</header>
+
+<main>
+  <section class="services">
+    <h2>השירותים שלנו</h2>
+    <p>אבטחה רפואית - מערים וחובשים</p>
+    <p>שירותי אבטחה</p>
+    <p>מדריכי/ות טיולים</p>
+    <p>Medical and security services</p>
+  </section>
+
+  <section class="description">
+    <p>אזורי שירות: ירושלים וסביבותיה, ניתן גם לפי הזמנה בכל הארץ.</p>
+    <p>שירות ומחיר ללא תחרות.</p>
+    <p>ניתן לקבל את כל שירותי הטיולים משירותי הדרכה ועד שירותי אבטחה רפואית ושמירה.</p>
+  </section>
+
+  <section class="contacts">
+    <h2>צרו קשר</h2>
+    <ul>
+      <li><a href="tel:0584181598">☎ עומר Omer : 058-418-1598</a></li>
+      <li><a href="tel:0542879174">☎ אקי Eki : 054-287-9174</a></li>
+      <li><a href="mailto:jerusalemtrips@gmail.com">✉ jerusalemtrips@gmail.com</a></li>
+    </ul>
+  </section>
+
   <style>
     * {
       box-sizing: border-box;
