--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-<header>
-  <div id="logo">טיולי ירושלים</div>
-</header>
+  <header>
+    <div id="logo">טיולי ירושלים</div>
+    <div class="logo-img-container">
+      <img src="logo.png" alt="לוגו טיולי ירושלים" class="logo">
+    </div>
+  </header>
+  
 
 <section class="text-container">
   <h2>ברוכים הבאים לטיולי ירושלים</h2>
