--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <header>
     <div id="logo">טיולי ירושלים</div>
-    <div class="logo-img-container">
-      <img src="logo.png" alt="לוגו טיולי ירושלים" class="logo">
+    <div class="logo.jpg-img-container">
+      <img src="logo.jpg" alt="לוגו טיולי ירושלים" class="logo">
     </div>
   </header>
   
@@ -24,7 +24,7 @@
 </section>
 
 <section class="services">
-  <h2>השירותים שלנו</h2>
+  <h2>המקצועיות שלנו</h2>
   <p>שירותי אבטחה רפואית - פאראמדיקים וחובשים</p>
   <p>שירותי שמירה</p>
   <p>מדריכי ומדריכות טיולים מקצועיים</p>
@@ -110,14 +110,17 @@
 <section class="gallery-wrapper">
   <h2>ועוד קצת עלינו :)</h2>
   <div class="gallery">
-    <img id="image-slider" src="images/1.jpg" alt="תמונה מתוך טיולי ירושלים">
+    <img id="image-slider" 
+    src="images/1.jpg" 
+    
+    alt="תמונה מתוך טיולי ירושלים">
   </div>
 </section>
 
 <div id="backToTop" onclick="window.scrollTo({top: 0, behavior: 'smooth'});">↑</div>
 <div class="gallery">
   <img src="path/to/your-image.jpg" alt="Image description">
-  <img class="logo-overlay" src="path/to/logo.png" alt="Logo">
+  <img class="logo-overlay" src="path/to/logo.jpg" alt="Logo">
 </div>
 
 </body>
@@ -128,12 +131,14 @@
   </style>
 </head>
 
-}
+
 <שירות ומקצועיות באהבה>
 
 <p><strong>מחפשים השראה למסלול הבא?</strong>
   <a href="https://www.itraveljerusalem.com/he/lobby/magazine" target="_blank">
+   
     צפו בכתבה על המקומות הכי שקטים ומרגיעים בירושלים
+
   </a> וקבלו רעיונות לטיול בלתי נשכח.
 </p>
 
